--- a/flux/service.yaml
+++ b/flux/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: gitops-foundations
   annotations:
-    service.beta.kubernetes.io/azure-dns-label-name: {dockerHubUsername}
+    service.beta.kubernetes.io/azure-dns-label-name: nkaplan19
   namespace: flux-exercise
 spec:
   type: LoadBalancer
